fix it so the message origin doesn't default to localhost.

--- a/iframe.html
+++ b/iframe.html
@@ -41,7 +41,7 @@
 <script type="text/javascript">
     parent.postMessage({
         height: document.body.clientHeight
-    }, "http://localhost:3333");
+    }, window.location.origin);
 </script>
 
 </html>
